--- a/src/sample/sample1.fxml
+++ b/src/sample/sample1.fxml
@@ -1,25 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.Group?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.Tab?>
-<?import javafx.scene.control.TabPane?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="475.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="475.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
    <children>
       <MenuBar layoutY="2.0" prefHeight="25.0" prefWidth="700.0">
         <menus>
@@ -47,15 +33,15 @@
                     <content>
                       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="450.0" prefWidth="700.0">
                            <children>
-                              <Button layoutY="371.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="233.3" text="Button" />
-                              <Button layoutX="234.0" layoutY="371.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="233.3" text="Button" />
-                              <Button layoutX="468.0" layoutY="371.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="233.3" text="Button" />
+                              <Button layoutY="371.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="233.3" text="Add" />
+                              <Button layoutX="234.0" layoutY="371.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="233.3" text="Edit" />
+                              <Button layoutX="468.0" layoutY="371.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="233.3" text="Remove" />
                               <Label layoutX="65.0" layoutY="54.0" text="ID1" />
                               <Label layoutX="65.0" layoutY="109.0" text="ID2" />
                               <Label layoutX="57.0" layoutY="156.0" text="Details" />
-                              <TextField layoutX="117.0" layoutY="50.0" prefHeight="25.0" prefWidth="543.0" />
-                              <TextField layoutX="117.0" layoutY="105.0" prefHeight="25.0" prefWidth="543.0" />
-                              <TextArea layoutX="117.0" layoutY="156.0" prefHeight="200.0" prefWidth="543.0" />
+                              <TextField layoutX="117.0" layoutY="50.0" prefHeight="25.0" prefWidth="543.0" promptText="Ex: 1" />
+                              <TextField layoutX="117.0" layoutY="105.0" prefHeight="25.0" prefWidth="543.0" promptText="Ex: 2" />
+                              <TextArea layoutX="117.0" layoutY="156.0" prefHeight="200.0" prefWidth="543.0" promptText="Distancia, Tempo" />
                            </children></AnchorPane>
                     </content>
                   </Tab>
