--- a/src/sample/sample1.fxml
+++ b/src/sample/sample1.fxml
@@ -1,11 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.Group?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="475.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="475.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
    <children>
       <MenuBar layoutY="2.0" prefHeight="25.0" prefWidth="700.0">
         <menus>
@@ -35,15 +45,15 @@
                     <content>
                       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="450.0" prefWidth="700.0">
                            <children>
-                              <Button fx:id="buttonAdd" layoutY="371.0" mnemonicParsing="false" onAction="#handleButtonAdd" prefHeight="25.0" prefWidth="233.3" text="Add" />
-                              <Button fx:id="buttonEdit" layoutX="234.0" layoutY="371.0" mnemonicParsing="false" onAction="#handleButtonEdit" prefHeight="25.0" prefWidth="233.3" text="Edit" />
-                              <Button fx:id="buttonRemove" layoutX="468.0" layoutY="371.0" mnemonicParsing="false" onAction="#handleButtonRemove" prefHeight="25.0" prefWidth="233.3" text="Remove" />
+                              <Button fx:id="buttonAdd" layoutY="376.0" mnemonicParsing="false" onAction="#handleButtonAdd" prefHeight="40.0" prefWidth="234.0" text="Add" />
+                              <Button fx:id="buttonEdit" layoutX="233.0" layoutY="376.0" mnemonicParsing="false" onAction="#handleButtonEdit" prefHeight="40.0" prefWidth="233.3" text="Edit" />
+                              <Button fx:id="buttonRemove" layoutX="467.0" layoutY="376.0" mnemonicParsing="false" onAction="#handleButtonRemove" prefHeight="40.0" prefWidth="233.3" text="Remove" />
                               <Label layoutX="66.0" layoutY="33.0" text="ID1" />
                               <Label layoutX="66.0" layoutY="88.0" text="ID2" />
                               <Label layoutX="58.0" layoutY="142.0" text="Details" />
                               <TextField fx:id="id1" layoutX="117.0" layoutY="29.0" prefHeight="25.0" prefWidth="543.0" promptText="Ex: geocache10" />
-                              <TextField fx:id="id2" layoutX="117.0" layoutY="84.0" prefHeight="25.0" prefWidth="543.0" promptText="Ex: geocache10 (0 caso adicionar varias edges)" />
-                              <TextArea fx:id="details" layoutX="117.0" layoutY="142.0" prefHeight="200.0" prefWidth="543.0" promptText="d;weight / edge_end;weight" />
+                              <TextField fx:id="id2" layoutX="117.0" layoutY="84.0" prefHeight="25.0" prefWidth="543.0" promptText="Para Arestas: Ex: geocache10" />
+                              <TextArea fx:id="details" layoutX="117.0" layoutY="142.0" prefHeight="200.0" prefWidth="543.0" promptText="Vertice: FODASSE | Aresta: Temp;Dist" />
                            </children></AnchorPane>
                     </content>
                   </Tab>
@@ -51,36 +61,80 @@
                   <content>
                     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="450.0" prefWidth="700.0">
                            <children>
-                              <VBox prefHeight="421.0" prefWidth="700.0">
-                                 <children>
-                                    <HBox prefHeight="419.0" prefWidth="700.0">
-                                       <children>
-                                          <ComboBox prefHeight="25.0" prefWidth="340.0" promptText="Informacao">
-                                             <padding>
-                                                <Insets top="2.0" />
-                                             </padding>
-                                             <HBox.margin>
-                                                <Insets left="5.0" top="5.0" />
-                                             </HBox.margin>
-                                          </ComboBox>
-                                          <ComboBox prefHeight="25.0" prefWidth="340.0">
-                                             <padding>
-                                                <Insets top="2.0" />
-                                             </padding>
-                                             <HBox.margin>
-                                                <Insets left="10.0" right="5.0" top="5.0" />
-                                             </HBox.margin>
-                                          </ComboBox>
-                                       </children>
-                                    </HBox>
-                                    <TableView prefHeight="767.0" prefWidth="700.0">
-                                      <columns>
-                                        <TableColumn prefWidth="75.0" text="Users" />
-                                        <TableColumn prefWidth="75.0" text="C2" />
-                                      </columns>
-                                    </TableView>
-                                 </children>
-                              </VBox>
+                              <TabPane nodeOrientation="LEFT_TO_RIGHT" prefHeight="425.0" prefWidth="700.0" side="LEFT" tabClosingPolicy="UNAVAILABLE">
+                                <tabs>
+                                  <Tab text="Users">
+                                    <content>
+                                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                                             <children>
+                                                <TableView layoutX="-1.0" layoutY="2.0" prefHeight="388.0" prefWidth="671.0" AnchorPane.bottomAnchor="37.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                                  <columns>
+                                                      <TableColumn prefWidth="50.0" text="ID" />
+                                                    <TableColumn prefWidth="120.0" text="Nome" />
+                                                    <TableColumn prefWidth="120.0" text="Tipo" />
+                                                  </columns>
+                                                </TableView>
+                                                <Button layoutY="388.0" mnemonicParsing="false" prefHeight="33.0" prefWidth="336.0" text="Adicionar" />
+                                                <Button layoutX="336.0" layoutY="388.0" mnemonicParsing="false" prefHeight="33.0" prefWidth="336.0" text="Remover" />
+                                             </children>
+                                          </AnchorPane>
+                                    </content>
+                                  </Tab>
+                                  <Tab text="Regiões">
+                                    <content>
+                                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                                             <children>
+                                                <TableView prefHeight="388.0" prefWidth="673.0">
+                                                   <columns>
+                                                      <TableColumn prefWidth="50.0" text="ID" />
+                                                      <TableColumn prefWidth="120.0" text="Nome" />
+                                                      <TableColumn prefWidth="120.0" text="ID Geocache" />
+                                                   </columns>
+                                                </TableView>
+                                                <Button layoutY="388.0" mnemonicParsing="false" prefHeight="33.0" prefWidth="336.0" text="Adicionar" />
+                                                <Button layoutX="346.0" layoutY="398.0" mnemonicParsing="false" prefHeight="33.0" prefWidth="336.0" text="Remover" />
+                                             </children>
+                                          </AnchorPane>
+                                    </content>
+                                  </Tab>
+                                    <Tab text="Geocaches">
+                                      <content>
+                                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                                             <children>
+                                                <TableView prefHeight="388.0" prefWidth="673.0">
+                                                   <columns>
+                                                      <TableColumn prefWidth="120.0" text="ID" />
+                                                      <TableColumn prefWidth="120.0" text="Tipo" />
+                                                      <TableColumn prefWidth="120.0" text="Coordenada X" />
+                                                      <TableColumn prefWidth="120.0" text="Coordenada Y" />
+                                                      <TableColumn prefWidth="120.0" text="Itens" />
+                                                   </columns>
+                                                </TableView>
+                                                <Button layoutX="336.0" layoutY="388.0" mnemonicParsing="false" prefHeight="33.0" prefWidth="336.0" text="Remover" />
+                                                <Button layoutY="388.0" mnemonicParsing="false" prefHeight="33.0" prefWidth="336.0" text="Adicionar" />
+                                             </children>
+                                          </AnchorPane>
+                                      </content>
+                                    </Tab>
+                                    <Tab text="Itens">
+                                      <content>
+                                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                                             <children>
+                                                <TableView prefHeight="388.0" prefWidth="673.0">
+                                                   <columns>
+                                                      <TableColumn prefWidth="50.0" text="ID" />
+                                                      <TableColumn prefWidth="120.0" text="ID Geocache" />
+                                                      <TableColumn prefWidth="120.0" text="Nome" />
+                                                   </columns>
+                                                </TableView>
+                                                <Button layoutX="336.0" layoutY="388.0" mnemonicParsing="false" prefHeight="33.0" prefWidth="336.0" text="Remover" />
+                                                <Button layoutY="388.0" mnemonicParsing="false" prefHeight="33.0" prefWidth="336.0" text="Adicionar" />
+                                             </children>
+                                          </AnchorPane>
+                                      </content>
+                                    </Tab>
+                                </tabs>
+                              </TabPane>
                            </children></AnchorPane>
                   </content>
                 </Tab>
