--- a/src/sample/sample1.fxml
+++ b/src/sample/sample1.fxml
@@ -1,10 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.Group?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="475.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="475.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
    <children>
       <MenuBar layoutY="2.0" prefHeight="25.0" prefWidth="700.0">
         <menus>
@@ -96,7 +107,8 @@
                                                       <TableColumn fx:id="tipoGeoCol" prefWidth="120.0" text="Tipo" />
                                                       <TableColumn fx:id="cxGeoCol" prefWidth="120.0" text="Coordenada X" />
                                                       <TableColumn fx:id="cyGeoCol" prefWidth="120.0" text="Coordenada Y" />
-                                                      <TableColumn fx:id="itensGeoCol" prefWidth="120.0" text="Itens" />
+                                                      <TableColumn fx:id="itensGeoCol" prefWidth="50.0" text="Itens" />
+                                                      <TableColumn fx:id="iDRegGeoCol" prefWidth="50.0" text="ID Reg" />
                                                    </columns>
                                                 </TableView>
                                                 <Button fx:id="removeGeoButton" layoutX="336.0" layoutY="388.0" mnemonicParsing="false" onAction="#removeGeo" prefHeight="33.0" prefWidth="336.0" text="Remover" />
