--- a/src/sample/sample1.fxml
+++ b/src/sample/sample1.fxml
@@ -53,7 +53,7 @@
                               <Label layoutX="58.0" layoutY="142.0" text="Details" />
                               <TextField fx:id="id1" layoutX="117.0" layoutY="29.0" prefHeight="25.0" prefWidth="543.0" promptText="Ex: geocache10" />
                               <TextField fx:id="id2" layoutX="117.0" layoutY="84.0" prefHeight="25.0" prefWidth="543.0" promptText="Para Arestas: Ex: geocache10" />
-                              <TextArea fx:id="details" layoutX="117.0" layoutY="142.0" prefHeight="200.0" prefWidth="543.0" promptText="Vertice: FODASSE | Aresta: Temp;Dist" />
+                              <TextArea fx:id="details" layoutX="117.0" layoutY="142.0" prefHeight="200.0" prefWidth="543.0" promptText="Vertice: ..... | Aresta: Temp;Dist" />
                            </children></AnchorPane>
                     </content>
                   </Tab>
@@ -88,7 +88,7 @@
                                                    <columns>
                                                       <TableColumn fx:id="idRegCol" prefWidth="50.0" text="ID" />
                                                       <TableColumn fx:id="nomeRegCol" prefWidth="120.0" text="Nome" />
-                                                      <TableColumn fx:id="idGeoRegCol" prefWidth="120.0" text="ID Geocache" />
+                                                      <TableColumn fx:id="idGeoRegCol" prefWidth="120.0" text="N Geocaches" />
                                                    </columns>
                                                 </TableView>
                                                 <Button fx:id="addRegButton" layoutY="388.0" mnemonicParsing="false" onAction="#addReg" prefHeight="33.0" prefWidth="336.0" text="Adicionar" />
